--- a/featureModel/SecondModelEnglishDataset.ipynb
+++ b/featureModel/SecondModelEnglishDataset.ipynb
@@ -103,7 +103,7 @@
         }
       },
       "source": [
-        "df = pd.read_excel('dataset3.xlsx')\n",
+        "df = pd.read_excel('englishOriginalDataset.xlsx')\n",
         "df.reset_index()\n",
         "df = df.iloc[:,[2,3,5,8,9,11,12,13]]\n",
         "df.columns = [\"verb_veridial_positive\",\n",
@@ -1199,31 +1199,6 @@
       },
       "source": [
         "model.save('featureModelEng.h5')"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "eumOj-NEwNsa",
-        "colab_type": "text"
-      },
-      "source": [
-        "## Load model example"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "_iSl1JGpu9-E",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "model2 = tf.keras.models.load_model('my_model.h5',custom_objects={'LeakyReLU': keras.layers.LeakyReLU })\n",
-        "model2.summary()\n",
-        "print(model2.evaluate(X_train, y_train))"
       ],
       "execution_count": 0,
       "outputs": []
