--- a/featureModel/SecondModelPolishDataset.ipynb
+++ b/featureModel/SecondModelPolishDataset.ipynb
@@ -39,10 +39,10 @@
       "metadata": {
         "id": "QLg6EMKN2D0x",
         "colab_type": "code",
-        "outputId": "1c29b355-1ba2-41b0-832f-8b7ca9642a7e",
+        "outputId": "312b50ff-6236-4267-e8de-e86ec88e1ff2",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 446
+          "height": 409
         }
       },
       "source": [
@@ -59,26 +59,26 @@
           "output_type": "stream",
           "text": [
             "Requirement already satisfied: transformers in /usr/local/lib/python3.6/dist-packages (2.8.0)\n",
-            "Requirement already satisfied: boto3 in /usr/local/lib/python3.6/dist-packages (from transformers) (1.12.40)\n",
             "Requirement already satisfied: sacremoses in /usr/local/lib/python3.6/dist-packages (from transformers) (0.0.41)\n",
-            "Requirement already satisfied: regex!=2019.12.17 in /usr/local/lib/python3.6/dist-packages (from transformers) (2019.12.20)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.6/dist-packages (from transformers) (2.21.0)\n",
+            "Requirement already satisfied: sentencepiece in /usr/local/lib/python3.6/dist-packages (from transformers) (0.1.85)\n",
             "Requirement already satisfied: dataclasses; python_version < \"3.7\" in /usr/local/lib/python3.6/dist-packages (from transformers) (0.7)\n",
             "Requirement already satisfied: tqdm>=4.27 in /usr/local/lib/python3.6/dist-packages (from transformers) (4.38.0)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.6/dist-packages (from transformers) (2.21.0)\n",
-            "Requirement already satisfied: tokenizers==0.5.2 in /usr/local/lib/python3.6/dist-packages (from transformers) (0.5.2)\n",
-            "Requirement already satisfied: sentencepiece in /usr/local/lib/python3.6/dist-packages (from transformers) (0.1.85)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from transformers) (1.18.2)\n",
+            "Requirement already satisfied: boto3 in /usr/local/lib/python3.6/dist-packages (from transformers) (1.12.40)\n",
             "Requirement already satisfied: filelock in /usr/local/lib/python3.6/dist-packages (from transformers) (3.0.12)\n",
-            "Requirement already satisfied: botocore<1.16.0,>=1.15.40 in /usr/local/lib/python3.6/dist-packages (from boto3->transformers) (1.15.40)\n",
-            "Requirement already satisfied: jmespath<1.0.0,>=0.7.1 in /usr/local/lib/python3.6/dist-packages (from boto3->transformers) (0.9.5)\n",
-            "Requirement already satisfied: s3transfer<0.4.0,>=0.3.0 in /usr/local/lib/python3.6/dist-packages (from boto3->transformers) (0.3.3)\n",
-            "Requirement already satisfied: click in /usr/local/lib/python3.6/dist-packages (from sacremoses->transformers) (7.1.1)\n",
-            "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from sacremoses->transformers) (1.12.0)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from transformers) (1.18.2)\n",
+            "Requirement already satisfied: tokenizers==0.5.2 in /usr/local/lib/python3.6/dist-packages (from transformers) (0.5.2)\n",
+            "Requirement already satisfied: regex!=2019.12.17 in /usr/local/lib/python3.6/dist-packages (from transformers) (2019.12.20)\n",
             "Requirement already satisfied: joblib in /usr/local/lib/python3.6/dist-packages (from sacremoses->transformers) (0.14.1)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from sacremoses->transformers) (1.12.0)\n",
+            "Requirement already satisfied: click in /usr/local/lib/python3.6/dist-packages (from sacremoses->transformers) (7.1.1)\n",
             "Requirement already satisfied: idna<2.9,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests->transformers) (2.8)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests->transformers) (2020.4.5.1)\n",
             "Requirement already satisfied: urllib3<1.25,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests->transformers) (1.24.3)\n",
             "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests->transformers) (3.0.4)\n",
+            "Requirement already satisfied: botocore<1.16.0,>=1.15.40 in /usr/local/lib/python3.6/dist-packages (from boto3->transformers) (1.15.40)\n",
+            "Requirement already satisfied: s3transfer<0.4.0,>=0.3.0 in /usr/local/lib/python3.6/dist-packages (from boto3->transformers) (0.3.3)\n",
+            "Requirement already satisfied: jmespath<1.0.0,>=0.7.1 in /usr/local/lib/python3.6/dist-packages (from boto3->transformers) (0.9.5)\n",
             "Requirement already satisfied: docutils<0.16,>=0.10 in /usr/local/lib/python3.6/dist-packages (from botocore<1.16.0,>=1.15.40->boto3->transformers) (0.15.2)\n",
             "Requirement already satisfied: python-dateutil<3.0.0,>=2.1 in /usr/local/lib/python3.6/dist-packages (from botocore<1.16.0,>=1.15.40->boto3->transformers) (2.8.1)\n"
           ],
@@ -114,14 +114,14 @@
       "metadata": {
         "id": "j--zuCZf2HvJ",
         "colab_type": "code",
-        "outputId": "79754a9c-033b-4d96-f91b-81e27a08441b",
+        "outputId": "1bf3c21d-de60-4da6-a5dc-c90508bf2e08",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 214
+          "height": 197
         }
       },
       "source": [
-        "df = pd.read_excel('PolishDataSet.xlsx')\n",
+        "df = pd.read_excel('polishOriginalDataset.xlsx')\n",
         "df.reset_index()\n",
         "df = df.iloc[:,[6,8,9,10,15,16,19,21,5]]\n",
         "df.columns = [\n",
@@ -185,7 +185,7 @@
               "      <td>?</td>\n",
               "      <td>brak</td>\n",
               "      <td>0</td>\n",
-              "      <td>N</td>\n",
+              "      <td>nie dotyczy</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
@@ -197,7 +197,7 @@
               "      <td>?</td>\n",
               "      <td>past</td>\n",
               "      <td>0</td>\n",
-              "      <td>?</td>\n",
+              "      <td>no</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -209,7 +209,7 @@
               "      <td>?</td>\n",
               "      <td>past</td>\n",
               "      <td>0</td>\n",
-              "      <td>N</td>\n",
+              "      <td>nie dotyczy</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -221,7 +221,7 @@
               "      <td>\"+\"</td>\n",
               "      <td>past</td>\n",
               "      <td>0</td>\n",
-              "      <td>N</td>\n",
+              "      <td>nie dotyczy</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
@@ -233,7 +233,7 @@
               "      <td>o</td>\n",
               "      <td>present</td>\n",
               "      <td>0</td>\n",
-              "      <td>N</td>\n",
+              "      <td>nie dotyczy</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -241,11 +241,11 @@
             ],
             "text/plain": [
               "  type_of_sentence verb_main_semantic_class  ... t_negation semantic_relation\n",
-              "0       eliptyczne                 mówienia  ...          0                 N\n",
-              "1       eliptyczne             epistemiczny  ...          0                 ?\n",
-              "2       eliptyczne                 mówienia  ...          0                 N\n",
-              "3                1             epistemiczny  ...          0                 N\n",
-              "4                1             epistemiczny  ...          0                 N\n",
+              "0       eliptyczne                 mówienia  ...          0       nie dotyczy\n",
+              "1       eliptyczne             epistemiczny  ...          0                no\n",
+              "2       eliptyczne                 mówienia  ...          0       nie dotyczy\n",
+              "3                1             epistemiczny  ...          0       nie dotyczy\n",
+              "4                1             epistemiczny  ...          0       nie dotyczy\n",
               "\n",
               "[5 rows x 9 columns]"
             ]
@@ -253,7 +253,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 75
+          "execution_count": 89
         }
       ]
     },
@@ -272,10 +272,10 @@
       "metadata": {
         "id": "ewr4Z-ZH8e6Q",
         "colab_type": "code",
-        "outputId": "5d334694-3711-453a-91ea-a24215caa97b",
+        "outputId": "6143e5ce-ce16-4a6c-f4a7-72ce02395b26",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 214
+          "height": 197
         }
       },
       "source": [
@@ -416,7 +416,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 76
+          "execution_count": 87
         }
       ]
     },
@@ -448,10 +448,10 @@
       "metadata": {
         "id": "FVbjgIUMOXXi",
         "colab_type": "code",
-        "outputId": "56b84062-a10e-49ae-8bc5-f60bbfc875ce",
+        "outputId": "3ec06291-ca6f-4ade-c2ff-f0f67bf5b71a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 372
+          "height": 358
         }
       },
       "source": [
@@ -1407,81 +1407,6 @@
       },
       "source": [
         "model.save('featureModelPl.h5')"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "eumOj-NEwNsa",
-        "colab_type": "text"
-      },
-      "source": [
-        "## Load model example"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "_iSl1JGpu9-E",
-        "colab_type": "code",
-        "outputId": "44125ecd-12f6-4133-c779-5035caa4f3de",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 479
-        }
-      },
-      "source": [
-        "model2 = tf.keras.models.load_model('my_model.h5',custom_objects={'LeakyReLU': keras.layers.LeakyReLU })\n",
-        "model2.summary()\n",
-        "print(model2.evaluate(X_train, y_train))"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Model: \"sequential_8\"\n",
-            "_________________________________________________________________\n",
-            "Layer (type)                 Output Shape              Param #   \n",
-            "=================================================================\n",
-            "dense_58 (Dense)             (None, 250)               19250     \n",
-            "_________________________________________________________________\n",
-            "dense_59 (Dense)             (None, 500)               125500    \n",
-            "_________________________________________________________________\n",
-            "dense_60 (Dense)             (None, 1000)              501000    \n",
-            "_________________________________________________________________\n",
-            "dense_61 (Dense)             (None, 2000)              2002000   \n",
-            "_________________________________________________________________\n",
-            "dense_62 (Dense)             (None, 500)               1000500   \n",
-            "_________________________________________________________________\n",
-            "dense_63 (Dense)             (None, 250)               125250    \n",
-            "_________________________________________________________________\n",
-            "dense_64 (Dense)             (None, 50)                12550     \n",
-            "_________________________________________________________________\n",
-            "dense_65 (Dense)             (None, 4)                 204       \n",
-            "=================================================================\n",
-            "Total params: 3,786,254\n",
-            "Trainable params: 3,786,254\n",
-            "Non-trainable params: 0\n",
-            "_________________________________________________________________\n",
-            "82/82 [==============================] - 1s 10ms/step - loss: 0.4777 - accuracy: 0.8814\n",
-            "[0.47772297263145447, 0.8813559412956238]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "LSlD_HDrDjiQ",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
       ],
       "execution_count": 0,
       "outputs": []
