--- a/featureModel/TestingSecondModels.ipynb
+++ b/featureModel/TestingSecondModels.ipynb
@@ -36,7 +36,7 @@
         "1.   Run \"Read libraries\" cell\n",
         "2.   Check you have models to read in your directory. (You should have featureModelEng.h5 and featureModelPl.h5 here) \n",
         "3.   Run \"Read models\" \n",
-        "4.   Input data into an \"Input data\" cell and run it - all possible values you can find in \"Possible values\" cell \n",
+        "4.   Input data into an \"Input data\" cell and run it \n",
         "5.   Check you have engData.csv and plData.csv in your directory \n",
         "6.   Run \"Input data preprocess\" cell \n",
         "7.   Run \"Model test\" cell \n",
@@ -85,10 +85,10 @@
       "metadata": {
         "id": "0rZLc6TQHtgd",
         "colab_type": "code",
-        "outputId": "925ef672-c335-4898-97f4-c883660fd40c",
+        "outputId": "e3a56297-2c4f-4401-9b9e-9b2d9ce4d9a1",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
+          "height": 68
         }
       },
       "source": [
@@ -103,14 +103,21 @@
         "  print(\"Model featureModelPl.h5 read successfully!\")\n",
         "except: \n",
         "  print(\"Error occured during reading file!\")\n",
-        "  print(\"Probably you don't have featureModelPl.h5 in your working directory!\\n\")"
+        "  print(\"Probably you don't have featureModelPl.h5 in your working directory!\\n\")\n",
+        "try:\n",
+        "  feature_model_pl_presup = tf.keras.models.load_model('featureModelPlPresup.h5', custom_objects={\"LeakyReLU\": keras.layers.LeakyReLU})\n",
+        "  print(\"Model featureModelPl.h5 read successfully!\")\n",
+        "except: \n",
+        "  print(\"Error occured during reading file!\")\n",
+        "  print(\"Probably you don't have featureModelPlPresup.h5 in your working directory!\\n\")  "
       ],
-      "execution_count": 131,
+      "execution_count": 189,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Model featureModelEng.h5 read successfully!\n",
+            "Model featureModelPl.h5 read successfully!\n",
             "Model featureModelPl.h5 read successfully!\n"
           ],
           "name": "stdout"
@@ -189,6 +196,36 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "colab_type": "text",
+        "id": "XSxoRA8i9Qsn"
+      },
+      "source": [
+        "### Model PL Presupposition"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "tJfe8YXK9Qs6",
+        "colab": {}
+      },
+      "source": [
+        "pl_presup_type_of_sentence           = \"\" # possible values (eliptyczne, pytajne, modalne, ... , 1, ?)\n",
+        "pl_presup_verb_main_semantic_class   = \"\" # possible values (mówienia, epistemiczny, percepcyjny, ... , ?)\n",
+        "pl_presup_verb_second_semantic_class = \"\" # possible values (none <brak>,  percepcyjny, epistemiczny, ...)\n",
+        "pl_presup_verb_third_semantic_class  = \"\" # possible values (none <brak>, percepcyjny, epistemiczny, emotywny ...)\n",
+        "pl_presup_verb_veridical_positive    = \"\" # possible values (o, ?, +, -)\n",
+        "pl_presup_verb_veridical_negative    = \"\" # possible values (o, ?, +, -)\n",
+        "pl_presup_verb_tense                 = \"\" # possible values (brak, past, present, future)\n",
+        "pl_presup_t_negation                 = \"\" # possible values (0, 1)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "a3uUV9zaVr0I",
         "colab_type": "text"
       },
@@ -201,15 +238,16 @@
       "metadata": {
         "id": "s-EsnuR7bPDt",
         "colab_type": "code",
+        "outputId": "4b16ba84-1b76-438b-fc65-c43a56befe8f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "e959ba3d-eb21-4579-b8a4-13753324fd2a"
+        }
       },
       "source": [
         "training_eng_data = pd.read_csv(\"engData.csv\", index_col=None)\n",
         "training_pl_data = pd.read_csv(\"plData.csv\", index_col=None)\n",
+        "training_pl_presup_data = pd.read_csv(\"plDataPresup.csv\", index_col=None)\n",
         "\n",
         "#Check values \n",
         "# eng \n",
@@ -249,7 +287,29 @@
         "except:\n",
         "  pl_t_negation = 0\n",
         "\n",
+        "# pl presup \n",
+        "if pl_presup_type_of_sentence not in training_pl_presup_data.type_of_sentence.unique():\n",
+        "  pl_presup_type_of_sentence = \"?\"\n",
+        "if pl_presup_verb_main_semantic_class not in training_pl_presup_data.verb_main_semantic_class.unique():\n",
+        "  pl_presup_verb_main_semantic_class = \"?\"\n",
+        "if pl_presup_verb_second_semantic_class not in training_pl_presup_data.verb_second_semantic_class.unique():\n",
+        "  pl_presup_verb_second_semantic_class = \"none\"\n",
+        "if pl_presup_verb_third_semantic_class not in training_pl_presup_data.verb_third_semantic_class.unique():\n",
+        "  pl_presup_verb_third_semantic_class = \"none\"\n",
+        "if pl_presup_verb_veridical_positive not in training_pl_presup_data.verb_veridical_positive.unique():\n",
+        "  pl_presup_verb_veridical_positive = \"?\"\n",
+        "if pl_presup_verb_veridical_negative not in training_pl_presup_data.verb_veridical_negative.unique():\n",
+        "  pl_presup_verb_veridical_negative = \"?\"\n",
+        "if pl_presup_verb_tense not in training_pl_presup_data.verb_tense.unique():\n",
+        "  pl_presup_verb_tense = \"brak\"\n",
+        "try:\n",
+        "  if int(pl_presup_t_negation) not in training_pl_presup_data.t_negation.unique():\n",
+        "    pl_presup_t_negation = 0\n",
+        "except:\n",
+        "  pl_presup_t_negation = 0\n",
+        "\n",
         "# append to datasets\n",
+        "# eng\n",
         "training_eng_data = training_eng_data.append({\n",
         " 'verb_veridial_positive': eng_verb_veridical_positive,\n",
         " 'verb_veridical_negative': eng_verb_veridical_negative,\n",
@@ -262,6 +322,7 @@
         "},\n",
         "ignore_index=True)\n",
         "\n",
+        "# pl\n",
         "training_pl_data = training_pl_data.append({\n",
         " 'type_of_sentence': pl_type_of_sentence,\n",
         " 'verb_main_semantic_class': pl_verb_main_semantic_class,\n",
@@ -275,21 +336,37 @@
         "},\n",
         "ignore_index=True)\n",
         "\n",
+        "#pl presup\n",
+        "training_pl_presup_data = training_pl_presup_data.append({\n",
+        " 'type_of_sentence': pl_presup_type_of_sentence,\n",
+        " 'verb_main_semantic_class': pl_presup_verb_main_semantic_class,\n",
+        " 'verb_second_semantic_class': pl_presup_verb_second_semantic_class,\n",
+        " 'verb_third_semantic_class': pl_presup_verb_third_semantic_class,\n",
+        " 'verb_veridical_positive': pl_presup_verb_veridical_positive,\n",
+        " 'verb_veridical_negative': pl_presup_verb_veridical_negative,\n",
+        " 'verb_tense': pl_presup_verb_tense,\n",
+        " 't_negation': pl_presup_t_negation,\n",
+        " 'presupposition': \"no\"                                      \n",
+        "},\n",
+        "ignore_index=True)\n",
+        "\n",
         "# vectorize\n",
         "eng_vectorized = pd.get_dummies(training_eng_data)\n",
         "pl_vectorized = pd.get_dummies(training_pl_data)\n",
+        "pl_presup_vectorized = pd.get_dummies(training_pl_presup_data)\n",
         "\n",
         "# get only last row\n",
         "eng_entry_model = eng_vectorized.tail(1)\n",
         "pl_entry_model = pl_vectorized.tail(1)\n",
+        "pl_presup_entry_model = pl_presup_vectorized.tail(1)\n",
         "\n",
         "# get features\n",
         "eng_input_model = eng_entry_model.iloc[:,1:-4] \n",
         "pl_input_model = pl_entry_model.iloc[:,1:-4]\n",
-        "\n",
+        "pl_presup_input_model = pl_presup_entry_model.iloc[:,1:-2]\n",
         "print(\"Data prepared to use in model. Run cell \\\"Model test\\\"\")"
       ],
-      "execution_count": 141,
+      "execution_count": 200,
       "outputs": [
         {
           "output_type": "stream",
@@ -315,15 +392,16 @@
       "metadata": {
         "id": "Zey8w5GbvRQd",
         "colab_type": "code",
+        "outputId": "7138b475-ec94-456e-a73e-ebc124012552",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
-        },
-        "outputId": "e4ed3239-93e7-49b9-d2b8-359575b56274"
+          "height": 68
+        }
       },
       "source": [
         "eng_prediction = feature_model_eng.predict_classes(eng_input_model)\n",
         "pl_prediction = feature_model_pl.predict_classes(pl_input_model)\n",
+        "pl_presup_prediction = feature_model_pl_presup.predict_classes(pl_presup_input_model)\n",
         "\n",
         "# eng prediction\n",
         "if 0 in eng_prediction:\n",
@@ -345,17 +423,25 @@
         "else:\n",
         "  pl_prediction_class = \"N\"\n",
         "\n",
+        "# pl presup prediction \n",
+        "if 0 in pl_presup_prediction:\n",
+        "  pl_presup_prediction_class = \"\\\"no\\\"\"\n",
+        "else:\n",
+        "  pl_presup_prediction_class = \"\\\"yes\\\"\"\n",
+        "\n",
         "\n",
         "print(\"Your predicted semantic relation class in english model is: {}\".format(eng_prediction_class))\n",
-        "print(\"Your predicted semantic relation class in polish model is {}\".format(pl_prediction_class))"
+        "print(\"Your predicted semantic relation class in polish model is {}\".format(pl_prediction_class))\n",
+        "print(\"Your predicted presupposition in polish model is {}\".format(pl_presup_prediction_class))"
       ],
-      "execution_count": 138,
+      "execution_count": 203,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Your predicted semantic relation class in english model is: E\n",
-            "Your predicted semantic relation class in polish model is E\n"
+            "Your predicted semantic relation class in polish model is E\n",
+            "Your predicted presupposition in polish model is \"no\"\n"
           ],
           "name": "stdout"
         }
