notebooks feature model updated

--- a/src/notebookes/featureModel/TestingSecondModels.ipynb
+++ b/src/notebookes/featureModel/TestingSecondModels.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "TestingSecondModels.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -85,7 +86,7 @@
       "metadata": {
         "id": "0rZLc6TQHtgd",
         "colab_type": "code",
-        "outputId": "e3a56297-2c4f-4401-9b9e-9b2d9ce4d9a1",
+        "outputId": "3ac1891a-c0c6-446a-a756-b037f70350f0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
@@ -111,7 +112,7 @@
         "  print(\"Error occured during reading file!\")\n",
         "  print(\"Probably you don't have featureModelPlPresup.h5 in your working directory!\\n\")  "
       ],
-      "execution_count": 189,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
@@ -181,10 +182,6 @@
         "colab": {}
       },
       "source": [
-        "pl_type_of_sentence           = \"\" # possible values (eliptyczne, pytajne, modalne, ... , 1, ?)\n",
-        "pl_verb_main_semantic_class   = \"\" # possible values (mówienia, epistemiczny, percepcyjny, ... , ?)\n",
-        "pl_verb_second_semantic_class = \"\" # possible values (none <brak>,  percepcyjny, epistemiczny, ...)\n",
-        "pl_verb_third_semantic_class  = \"\" # possible values (none <brak>, percepcyjny, epistemiczny, emotywny ...)\n",
         "pl_verb_veridical_positive    = \"\" # possible values (o, ?, +, -)\n",
         "pl_verb_veridical_negative    = \"\" # possible values (o, ?, +, -)\n",
         "pl_verb_tense                 = \"\" # possible values (brak, past, present, future)\n",
@@ -211,10 +208,6 @@
         "colab": {}
       },
       "source": [
-        "pl_presup_type_of_sentence           = \"\" # possible values (eliptyczne, pytajne, modalne, ... , 1, ?)\n",
-        "pl_presup_verb_main_semantic_class   = \"\" # possible values (mówienia, epistemiczny, percepcyjny, ... , ?)\n",
-        "pl_presup_verb_second_semantic_class = \"\" # possible values (none <brak>,  percepcyjny, epistemiczny, ...)\n",
-        "pl_presup_verb_third_semantic_class  = \"\" # possible values (none <brak>, percepcyjny, epistemiczny, emotywny ...)\n",
         "pl_presup_verb_veridical_positive    = \"\" # possible values (o, ?, +, -)\n",
         "pl_presup_verb_veridical_negative    = \"\" # possible values (o, ?, +, -)\n",
         "pl_presup_verb_tense                 = \"\" # possible values (brak, past, present, future)\n",
@@ -238,7 +231,7 @@
       "metadata": {
         "id": "s-EsnuR7bPDt",
         "colab_type": "code",
-        "outputId": "4b16ba84-1b76-438b-fc65-c43a56befe8f",
+        "outputId": "7c99ed3e-797f-473f-8ab3-02c888d9cf39",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -267,14 +260,6 @@
         "  eng_verb_tense = \"none\"\n",
         "\n",
         "# pl \n",
-        "if pl_type_of_sentence not in training_pl_data.type_of_sentence.unique():\n",
-        "  pl_type_of_sentence = \"?\"\n",
-        "if pl_verb_main_semantic_class not in training_pl_data.verb_main_semantic_class.unique():\n",
-        "  pl_verb_main_semantic_class = \"?\"\n",
-        "if pl_verb_second_semantic_class not in training_pl_data.verb_second_semantic_class.unique():\n",
-        "  pl_verb_second_semantic_class = \"none\"\n",
-        "if pl_verb_third_semantic_class not in training_pl_data.verb_third_semantic_class.unique():\n",
-        "  pl_verb_third_semantic_class = \"none\"\n",
         "if pl_verb_veridical_positive not in training_pl_data.verb_veridical_positive.unique():\n",
         "  pl_verb_veridical_positive = \"?\"\n",
         "if pl_verb_veridical_negative not in training_pl_data.verb_veridical_negative.unique():\n",
@@ -288,14 +273,6 @@
         "  pl_t_negation = 0\n",
         "\n",
         "# pl presup \n",
-        "if pl_presup_type_of_sentence not in training_pl_presup_data.type_of_sentence.unique():\n",
-        "  pl_presup_type_of_sentence = \"?\"\n",
-        "if pl_presup_verb_main_semantic_class not in training_pl_presup_data.verb_main_semantic_class.unique():\n",
-        "  pl_presup_verb_main_semantic_class = \"?\"\n",
-        "if pl_presup_verb_second_semantic_class not in training_pl_presup_data.verb_second_semantic_class.unique():\n",
-        "  pl_presup_verb_second_semantic_class = \"none\"\n",
-        "if pl_presup_verb_third_semantic_class not in training_pl_presup_data.verb_third_semantic_class.unique():\n",
-        "  pl_presup_verb_third_semantic_class = \"none\"\n",
         "if pl_presup_verb_veridical_positive not in training_pl_presup_data.verb_veridical_positive.unique():\n",
         "  pl_presup_verb_veridical_positive = \"?\"\n",
         "if pl_presup_verb_veridical_negative not in training_pl_presup_data.verb_veridical_negative.unique():\n",
@@ -324,10 +301,6 @@
         "\n",
         "# pl\n",
         "training_pl_data = training_pl_data.append({\n",
-        " 'type_of_sentence': pl_type_of_sentence,\n",
-        " 'verb_main_semantic_class': pl_verb_main_semantic_class,\n",
-        " 'verb_second_semantic_class': pl_verb_second_semantic_class,\n",
-        " 'verb_third_semantic_class': pl_verb_third_semantic_class,\n",
         " 'verb_veridical_positive': pl_verb_veridical_positive,\n",
         " 'verb_veridical_negative': pl_verb_veridical_negative,\n",
         " 'verb_tense': pl_verb_tense,\n",
@@ -338,10 +311,6 @@
         "\n",
         "#pl presup\n",
         "training_pl_presup_data = training_pl_presup_data.append({\n",
-        " 'type_of_sentence': pl_presup_type_of_sentence,\n",
-        " 'verb_main_semantic_class': pl_presup_verb_main_semantic_class,\n",
-        " 'verb_second_semantic_class': pl_presup_verb_second_semantic_class,\n",
-        " 'verb_third_semantic_class': pl_presup_verb_third_semantic_class,\n",
         " 'verb_veridical_positive': pl_presup_verb_veridical_positive,\n",
         " 'verb_veridical_negative': pl_presup_verb_veridical_negative,\n",
         " 'verb_tense': pl_presup_verb_tense,\n",
@@ -366,7 +335,7 @@
         "pl_presup_input_model = pl_presup_entry_model.iloc[:,1:-2]\n",
         "print(\"Data prepared to use in model. Run cell \\\"Model test\\\"\")"
       ],
-      "execution_count": 200,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
@@ -392,7 +361,7 @@
       "metadata": {
         "id": "Zey8w5GbvRQd",
         "colab_type": "code",
-        "outputId": "7138b475-ec94-456e-a73e-ebc124012552",
+        "outputId": "d73e4cac-7d6a-4eb4-ef0a-fa4f5609cf0f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
@@ -434,13 +403,13 @@
         "print(\"Your predicted semantic relation class in polish model is {}\".format(pl_prediction_class))\n",
         "print(\"Your predicted presupposition in polish model is {}\".format(pl_presup_prediction_class))"
       ],
-      "execution_count": 203,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Your predicted semantic relation class in english model is: E\n",
-            "Your predicted semantic relation class in polish model is E\n",
+            "Your predicted semantic relation class in polish model is N\n",
             "Your predicted presupposition in polish model is \"no\"\n"
           ],
           "name": "stdout"
